--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <p>The idea of this project is creating a video and doing a research about new sustainable ways of generating energy in Coldplay's concerts; in my case, creating piezoelectric based shoes which harvest energy from people's footsteps.</p>
     <p>Here's my video:</p>
 </div>
- <video class="lazy-video" controls poster="" data-src="videoa1.mp4">
+ <video controls poster="" data-src="/videoa1.mp4">
         Your browser does not support the video tag.
       </video>
 <!-- Scripts necessaris -->
