--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
  <video controls poster="" data-src="/videoa1.mp4">
         Your browser does not support the video tag.
       </video>
+<video controls poster="" data-src="rocbou.github.io/videoa1.mp4">
+    Your browser does not support the video tag.
+      </video>
 <!-- Scripts necessaris -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
