--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
  <video controls poster="" data-src="/videoa1.mp4">
         Your browser does not support the video tag.
       </video>
-<video controls poster="" data-src="rocbou.github.io/videoa1.mp4">
+<video controls poster="" data-src="https://rocbou.github.io/videoa1.mp4">
     Your browser does not support the video tag.
       </video>
 <!-- Scripts necessaris -->
