--- a/index.html
+++ b/index.html
@@ -6,7 +6,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>Roc's web</title>
     <style>body {
-    padding: 0; /* Elimina l'espai extra al voltant del cos */
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.video-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.video-item {
+  width: 300px;
+  max-width: 100%;
+}
+
+video {
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #000;
 }
 
 .container-fluid {
@@ -90,10 +117,10 @@
     <p>The idea of this project is creating a video and doing a research about new sustainable ways of generating energy in Coldplay's concerts; in my case, creating piezoelectric based shoes which harvest energy from people's footsteps.</p>
     <p>Here's my video:</p>
 </div>
- <video controls poster="" data-src="/videoa1.mp4">
+ <video class="lazy-video" controls poster="" data-src="/videoa1.mp4">
         Your browser does not support the video tag.
       </video>
-<video controls poster="" data-src="https://rocbou.github.io/videoa1.mp4">
+<video class="lazy-video" controls poster="" data-src="https://rocbou.github.io/videoa1.mp4">
     Your browser does not support the video tag.
       </video>
 <!-- Scripts necessaris -->
