--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ video {
 <video class="lazy-video" controls poster="" data-src="https://rocbou.github.io/videoa1.mp4">
     Your browser does not support the video tag.
       </video>
+<script></script>
 <!-- Scripts necessaris -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-
 </body>
 </html>
