--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ video {
     <p>The idea of this project is creating a video and doing a research about new sustainable ways of generating energy in Coldplay's concerts; in my case, creating piezoelectric based shoes which harvest energy from people's footsteps.</p>
     <p>Here's my video:</p>
 </div>
- <video class="lazy-video" controls poster="" data-src="/videoa1.mp4" width="600" height="400">
+ <video class="lazy-video" controls poster="" data-src="videoa1.mp4" width="600" height="400">
         Your browser does not support the video tag.
       </video>
     
