--- a/index.html
+++ b/index.html
@@ -16,21 +16,9 @@ h1 {
   margin: 20px 0;
 }
 
-.video-gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  padding: 20px;
-}
-
-.video-item {
-  width: 300px;
-  max-width: 100%;
-}
-
 video {
-  width: 50%;
+  width: 600px;
+  height: 400px;  
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #000;
