--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ video {
                     <a class="nav-link" href="#">Inici</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://rocbou.github.io/sele">PAU 2001</a>
+                    <a class="nav-link" href="https://rocbou.github.io/sele/">PAU 2001</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
